2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Removed all the "are you sure" questions as well as
	the associated gconf key.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: i18n fixes from Christian Neumair (bug #114875).

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* mahjongg.c (properties_callback): Converted bold_frame
	to GamesFrame.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* mahjongg.c: Removed separator from dialogs as in HIG.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: UI consistency (see bug #114447).

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
	

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (about_callback): Correct about dialog behaviour.

2003-05-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Made sure we can't have multiple score dialogs (bug
	#97320). Also removed the "want a new game" question.

2003-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: i18n fixups. Created the bold_frame convenience
	function to help achieve this. Fixes bug #112576. Also HIG fixups
	as per bug #112244.

2003-05-01  Abel Cheung  <maddog@linux.org.hk>

	* mahjongg.c (properties_callback): Revert accidental commit.

2003-03-12  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (select_game): HIGify the Select Game dialog a
	little.

2003-03-10  Ross Burton  <ross@burtonini.com>

	* mahjongg.c (properties_callback): Cool new Preferences dialog,
	HIG compliant and all.
