@@ -1,3 +1,8 @@
+2003-06-13  William Jon McCann  <mccann@jhu.edu>
+
+	* mahjongg.c (properties_callback): Changed preferences dialog
+	to 2x2 layout instead of 1x4.
+
 2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* mahjongg.c: Removed all the "are you sure" questions as well as
